--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -13,7 +13,7 @@
   margin-block: 1rem;
 }
 
-.portfolio li .title {
+.portfolio li h3 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -22,7 +22,7 @@
   margin-bottom: .5rem;
 }
 
-.portfolio li .title.github::before {
+.portfolio li h3.github::before {
   content: "";
   display: inline-block;
   width: 1rem;
