--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -1,8 +1,8 @@
 .experience {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   list-style: none;
 }
 
