--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -35,7 +35,7 @@
   display: inline-block;
   width: 1.2rem;
   height: 1.2rem;
-  background-image: url('/assets/img/icons/arrow-top.svg');
+  background-image: url('../img/icons/arrow-top.svg');
   background-repeat: no-repeat;
   background-size: contain;
   transition: all .2s ease-in-out;
