--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -34,7 +34,7 @@ body {
   width: 140vw;
   height: 100vh;
 
-  background-image: url("/assets/img/background.svg");
+  background-image: url("../img/background.svg");
   background-repeat: no-repeat;
   background-size: contain;
 
