--- a/assets/css/languages.css
+++ b/assets/css/languages.css
@@ -21,7 +21,7 @@
   display: inline-block;
   width: 1rem;
   height: 1rem;
-  background-image: url('/assets/img/icons/check.svg');
+  background-image: url('../img/icons/check.svg');
   background-size: contain;
   background-repeat: no-repeat;
 }
